--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adjoa's Portfolio</title>
     <link rel="stylesheet" href="./assets/styles.css"/>
 </head>
 <body>
+    <header>
+        <nav>
+            <p>Aspiring Developer</p>
+        <ul>
+            <li><a href="#About Me">About Me</a></li>
+            <li><a href="#My Projects">My Projects</a></li>
+            <li><a href="#Contact Me">Contact Me</a></li>
+        </ul>
+        </nav>
+    </header>
     
+    <main>
+        <section class="About-Me"> 
+            <h1>
+                <p class="name">Adjoa Hackman</p>
+            </h1>
+            <!-- <h2>About Me</h2>  -->
+            <img src="./assets/2FEE48C8-8869-480A-A5DB-7E1A5E20402A.JPEG" alt="Profile Photo">
+            <p> My name is Adjoa and I like kombucha.</p>
+            <h2>About Me</h2>
+            <h3>Work</h3>
+        </section>
+    </main>
+    
+    <footer>
+        <h3></h3>
+    </footer>
 </body>
-</html>
+    </html>
