pushing another draft with updates and help from amazing TA

--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
     </nav>
     
     <main>
-        <section id="Adjoa"> 
+        <h1 id="Adjoa_header">Adjoa Hackman </h1>
+        <section id="Adjoa_image"></section>
+
+
+
+
+
+        <!-- <section id="Adjoa"> 
             <p>Adjoa Hackman</p>
-            <!-- <p class="aspire">Aspiring Developer</p> -->
+            <p class="aspire">Aspiring Developer</p>
             <img src="./assets/2FEE48C8-8869-480A-A5DB-7E1A5E20402A.JPEG" alt="Profile Photo" class="center-image">
          <h1 class="About-Me"> About Me </h1> 
             <p> My name is Adjoa and I like kombucha.</p>
          <h2 class="Work"></h2>
-        </section>
+        </section> -->
     </main>
     <footer id="footer">
         <p>Made with love and long hours by Adjoa</p>
