--- a/index.html
+++ b/index.html
@@ -18,33 +18,49 @@
     <main>
         <div id="Adjoa_header">
             <h1>Adjoa Hackman </h1>
-            <p>Aspiring Developer</p>
+                <p>Aspiring Developer</p>
         </div>
         <section id="Adjoa_image" alt="Profile image"></section>
 
         <section id="About-Me">
             <h1>About Me</h1>
-            <p>I am Adjoa and I like kombucha and espresso.</p>
+                <p>I am Technical Program Manager at LinkedIn and a graduate of New York University. I am currently in a coding bootcamp to challenge myself and upskill. I am hoping to be a better Technical Program Manager and potentially transition into a developer role.</p>
         </section>
 
-        <section id="My-Projects" class="grid-images">
-            <div>
+        <section id="My-Projects">
             <h1>My Projects</h1>
-            <figure>
-            <a href=" https://adjoahackman.github.io/hmtl-css-refactoring-project-1" target="_blank"><img src="./assets/01-html-css-git-homework-demo-image.png" alt="Horiseon Project"><figcaption>I worked on this last week for our second challenge.<figcaption> </a> 
-            </figure>
+            <div id="main_projects">
+                <div id="Horiseon">
+                    <a href=" https://adjoahackman.github.io/hmtl-css-refactoring-project-1" target="_blank">
+                        <img src="./assets/01-html-css-git-homework-demo-image.png" alt="Horiseon Project">
+                    </a> 
+                    <p>I completed this for my second challenge in the engineering bootcamp.</p>
+                </div>
             </div>
-
-
-            <a id="linkedin-skills" href="./assets/1618352867835.gif" alt="gif of one of my linkedin projects"><img src="./assets/1618352867835.gif" alt="linkedin project image"></a>
-        </section>
-
+            <h1>Other Projects</h1>
+                <div id="linkedin-skills">
+                    <a href="./assets/1618352867835.gif" alt="gif of one of my linkedin projects">
+                    <img src="./assets/1618352867835.gif" alt="linkedin project image">
+                    </a>
+                        <p>This is one of the projects I worked on as a Technical Program Manager. It shows recruiters which skills assessments candidates have passed.</p>
+                </div>
+                <div id="other_projects">
+                <div class="other_projects" id="ai-inmail">
+                    <a href="./assets/aigen.jpeg" alt="picture of AI Generated InMails">
+                        <img src="./assets/aigen.jpeg" alt="AI Generated inmails"></a>
+                    <p>AI Generated InMails</p>
+                </div>
+                <div class="other_projects" id="skills-assessment">
+                    <a href="./assets/1700687608984.png" alt="picture of Skills Assessment in Recruiter">
+                        <img src="./assets/1700687608984.png" alt="skills assessment">
+                    </a>
+                </div>
+                </div>
+       
         <section id="Contact-Me">
             <h1>Contact Me</h1>
-            
-
-
         </section>
+
          <!-- <section id="Adjoa"> 
             <p>Adjoa Hackman</p>
             <p class="aspire">Aspiring Developer</p>
@@ -53,8 +69,9 @@
             <p> My name is Adjoa and I like kombucha.</p>
          <h2 class="Work"></h2>
         </section> -->
+
          <footer id="footer">
-            <p>Made with love and long hours by Adjoa</p>
+            <p>Made with love, confusion and long hours by Adjoa</p>
         </footer>
     </main>
 </body>
