editing my portfolio

--- a/ProjectPage.html
+++ b/ProjectPage.html
@@ -59,8 +59,8 @@
                     </div>
                     <div class="col">
                         <a href="https://alfwall.github.io/catzzeria/" target="_blank"><img src="./assets/Catzzeria Screenshot.png" alt="A picture of my first team project, Cattzeria" style="width:100%"></a>
-                        <h3>Weather Dashboard</h3>
-                        <p>Weather dashboard with the ability to see what you have searched and the weather for the next 5 days</p>
+                        <h3>Catzzeria!</h3>
+                        <p>Catzzeria, a clicker game! My first group project.</p>
                     </div>
                 </div>
             </div>
