--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <!-- <nav class="sidebar-nav">
-        <!-- <h1 class="sidebar"></h1> -->
-        <a href="#About-Me">About Me</a>
-        <a href="#My-Projects">My Projects</a>
-        <a href="#Contact-Me">Contact Me</a>
-    </nav> -->
-
     <nav class="nav flex-column">
-        <a class="nav-link active" aria-current="page" href="#">Projects</a>
+        <a class="nav-link active" aria-current="page" href="./ProjectPage.html" target="_blank">Projects</a>
         <a class="nav-link" href="#">About Me</a>
         <a class="nav-link" href="#">Contact Me</a>
       </nav>
@@ -32,32 +25,6 @@
             <h1>About Me</h1>
                 <p>I am Technical Program Manager at LinkedIn and a graduate of New York University. I am currently in a coding bootcamp to challenge myself and upskill. I am hoping to be a better Technical Program Manager and potentially transition into a developer role.</p>
         </section>
-
-        <section id="My-Projects">
-            <div class="first h-25 w-50 inline-block">
-                    <a href="/index2.html" target="_blank"></a> 
-                </div>
-            </div>
-            <!-- <h1>Other Projects</h1>
-                <div id="linkedin-skills">
-                    <a href="./assets/1618352867835.gif" alt="gif of one of my linkedin projects">
-                    <img src="./assets/1618352867835.gif" alt="linkedin project image">
-                    </a>
-                        <p>This is one of the projects I worked on as a Technical Program Manager. It shows recruiters which skills assessments candidates have passed.</p>
-                </div> -->
-                <!-- <div id="other_projects">
-                <div class="other_projects" id="ai-inmail">
-                    <a href="./assets/aigen.jpeg" alt="picture of AI Generated InMails">
-                        <img src="./assets/aigen.jpeg" alt="AI Generated inmails"></a>
-                    <p>AI Generated InMails</p>
-                </div>
-                <div class="other_projects" id="skills-assessment">
-                    <a href="./assets/1700687608984.png" alt="picture of Skills Assessment in Recruiter">
-                        <img src="./assets/1700687608984.png" alt="skills assessment">
-                    </a>
-                </div>
-                </div> -->
-       
         <section id="Contact-Me">
             <h1>Contact Me</h1>
         </section>
