continuing to improve my portolio and add my first project

--- a/ProjectPage.html
+++ b/ProjectPage.html
@@ -37,8 +37,8 @@
                         <p>A password generator.</p>
                     </div>
                     <div class="col">
-                        <a href="https://adjoahackman.github.io/Adjoa-s-Timed-Quiz/" target="_blank"><img src=img
-                                src="./assets/Adjoa's Timed Quiz Screenshot-1.png"
+                        <a href="https://adjoahackman.github.io/Adjoa-s-Timed-Quiz/" target="_blank">
+                            <img src="./assets/Adjoa's Timed Quiz Screenshot-1.png"
                                 alt="A picture of my finished timed quiz assignment" style="width:100%"></a>
                         <h3>Timed Quiz</h3>
                         <p>A Timed Quiz on the fundamentals of JavaScript.</p>
