--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adjoa's Portfolio</title>
-    <link rel="stylesheet" href="./assets/styles.css"/>
+    <link rel="stylesheet" href="./assets/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Spline+Sans+Mono:ital,wght@0,300..700;1,300..700&display=swap"
+        rel="stylesheet">
 </head>
+
+<nav class="nav nav-pills flex-column flex-sm-row fixed-center">
+    <a class="lex-sm-fill text-md-center nav-link active" aria-current="page" href="./ProjectPage.html">Projects</a>
+    <a class="lex-sm-fill text-md-center nav-link" href="www.linkedin.com/in/adjoa-hackman-37102050"
+        target="blank">Contact Me</a>
+    <a class="lex-sm-fill text-md-center nav-link" href="#">TBD</a>
+</nav>
+
 <body>
-    <nav class="nav flex-column">
-        <a class="nav-link active" aria-current="page" href="./ProjectPage.html" target="_blank">Projects</a>
-        <a class="nav-link" href="#">About Me</a>
-        <a class="nav-link" href="#">Contact Me</a>
-      </nav>
-
-    <main class="page d-flex p-5 m-3">
-        <div id="Adjoa_header">
-            <h1>Adjoa Hackman </h1>
-                <p>Aspiring Developer</p>
+    <main class="container fixed-center">
+        <div>
+            <img src="./assets/2FEE48C8-8869-480A-A5DB-7E1A5E20402A.JPEG" alt="Profile Picture" style="float:right">
         </div>
-        <section id="Adjoa_image" alt="Profile image"></section>
-
-        <section id="About-Me">
-            <h1>About Me</h1>
-                <p>I am Technical Program Manager at LinkedIn and a graduate of New York University. I am currently in a coding bootcamp to challenge myself and upskill. I am hoping to be a better Technical Program Manager and potentially transition into a developer role.</p>
-        </section>
-        <section id="Contact-Me">
-            <h1>Contact Me</h1>
-        </section>
-
-         <footer id="footer">
-            <p>Made with love, confusion and long hours by Adjoa</p>
-        </footer>
+        <div class="Intro">
+            <h1>Adjoa Hackman </h1>
+            <p>Aspiring Developer</p>
+            <p>I am Technical Program Manager at LinkedIn and a graduate of New York University. I am currently in a
+                coding bootcamp to challenge myself and upskill. I am hoping to be a better Technical Program Manager
+                and potentially transition into a developer role.</p>
+        </div>
+</main>
     </main>
 </body>
-    </html>
+
+</html>
